# w96msgroom.py

./: .gitignore  README.md  pyproject.toml  requirements.txt
documentation/: Client.md  Constants.md  Getting started.md  PrefixBot.md  User.md
src/w96msgroom/: __init__.py  client.py  constants.py  message.py  prefix_bot.py  user.py
tests/: 0-do-nothing.py  1-message-repeater.py  1-ping-bot.py  2-UNSAFE-eval-bot.py  2-welcomer.py  3-prefix-bot.py
