[project]
name = "w96msgroom"
version = "0.1.1.1"
dynamic = ["dependencies"]
authors = [
  { name="GEOEGII555", email="geoegii2001555@gmail.com" },
]
description = "A library to create bots for Windows 96 msgroom"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GEOEGII555/w96msgroom.py"
"Bug Tracker" = "https://github.com/GEOEGII555/w96msgroom.py/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
